--- a/static/style.css
+++ b/static/style.css
@@ -1,74 +1,66 @@
+@media (prefers-color-scheme: light) {
+    body {
+        background-color: white;
+        color: black;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #363B40;
+        color: #b8bfc6;
+    }
+    a:visited {
+        color: green;
+    }
+    /* Style for unvisited links */
+    a:link {
+        color: green;
+        text-decoration: none; /* Remove underline */
+    }
+
+    /* Style for visited links */
+    a:visited {
+        color: darkgreen;
+    }
+
+    /* Style for links on hover */
+    a:hover {
+        color: limegreen;
+        text-decoration: underline; /* Optional: underline on hover */
+    }
+
+    /* Style for links that are active (clicked) */
+    a:active {
+        color: darkolivegreen;
+    }
+}
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    color: #333;
 }
 
-.container {
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 90%;
-    max-width: 500px;
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
 }
 
-h1 {
-    color: #007BFF;
-    margin-bottom: 20px;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-label {
-    margin-bottom: 8px;
-    font-weight: bold;
-}
-
-input[type="date"] {
+th, td {
     padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    margin-bottom: 16px;
-    font-size: 16px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
 }
 
-button {
-    background-color: #007BFF;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
+th {
+    background-color: #f2f2f2;
 }
 
-button:hover {
-    background-color: #0056b3;
+.hazardous {
+    color: red;
 }
 
-h2 {
-    margin-top: 20px;
-    color: #007BFF;
+.non-hazardous {
+    color: green;
 }
 
-pre {
-    background: #f9f9f9;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 10px;
-    overflow: auto;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-    font-size: 14px;
-}
