--- a/static/style.css
+++ b/static/style.css
@@ -48,7 +48,7 @@ table {
 
 th, td {
     padding: 10px;
-    text-align: left;
+    text-align: right;
     border-bottom: 1px solid #ddd;
 }
 
@@ -64,3 +64,44 @@ th {
     color: green;
 }
 
+
+.container {
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center;
+}
+
+h1 {
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.date-input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 200px;
+    margin-right: 10px;
+    transition: border-color 0.3s;
+}
+
+.date-input:focus {
+    border-color: #007BFF;
+    outline: none;
+}
+
+.search-button {
+    padding: 10px 20px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.search-button:hover {
+    background-color: #0056b3;
+}
